# CompetitiveAnalysisGPT

./: .env.template  .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  slack.py  slack_manifest.yaml
competitive_analysis_gpt/: agent_runner.py  functions.py  llm_util.py  prompts.py
competitive_analysis_gpt/commands/: browse.py  crunchbase.py
scripts/: test_browsing.py
