[tool.poetry]
name = "competitive-analysis-gpt"
version = "0.1.0"
description = ""
authors = ["Rohan Kshirsagar <rohan.m.kshirsagar@gmail.com>"]
readme = "README.md"
packages = [{include = "competitive_analysis_gpt"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
pydantic = "^2.1.1"
jupyterlab = "^4.0.4"
numpy = "^1.25.2"
pandas = "^2.0.3"
bs4 = "^0.0.1"
html2text = "^2020.1.16"
duckduckgo-search = "^3.8.4"
youtube-transcript-api = "^0.6.1"
backoff = "^2.2.1"
colorama = "^0.4.6"
slack-bolt = "^1.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
